--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
         
-        <!--Navbar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div>
+        <!--Main Nav-->
+        <nav class="navbar navbar-lg navbar-light bg-light">
+            <div class="nav col-3">
                 <img src="Easybay.PNG" alt="EB Logo">
                 <a class="navbar-brand" href="#">Easy Bay</a>
             </div>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="my-2 my-lg-0 col-6">
                 <input class="form-control mr-m-4" type="search" placeholder="Search For Anything" aria-label="Search">
             </form>
-            <div class="top_right">
+            <div class="top_right col-1">
                 <a class="navbar-brand" href="#">Sign in</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -29,82 +29,84 @@
             </div>
         </nav>
 
+        <!--List Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <ul class="nav align-text-center">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Aeonium</a>
-                </li>
-                <li class="nav-item">
+            <ul class="nav">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Aeonium</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Andormidchus</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Agave</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Aloe</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Anacampseros</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">Aristole</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item col-sm">
                     <a class="nav-link" href="#">More...</a>
                 </li>
             </ul>
         </nav>
 
-        <div class="card text-center" style="width: 100%;">
+        <!--Hook line-->
+        <div class="card text-center col-sm Hook-line">
             <div class="card-body">
                 <h3 class="card-title">Your Source for Serious Succulent Specialties!</h3>
             </div>
         </div>
 
+        <!--Big Picture card-->
         <div class="discover-card">
-            <div class="card" style="width: 35rem;">
+            <div class="card col-6">
                 <img class="card-img-right" src="pexels-tharatip-sukee-866043.jpg" alt="Card image cap">
                 <div class="card-body">
                     <p class="card-text">Discover suprising succulents one pot or rack at a time!</p>
                     <a href="#" class="btn btn-primary">Discover -></a>
                 </div>
             </div>
+        </div>
 
-        <div class="card-deck text-center">
-            <div class="card">
+            <!--Bottom nav pics-->
+        <div class="row card-deck text-center">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Aeonium</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Agave</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Cactus</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Echeveria</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Sedum</h6>
                 </div>
             </div>
-            <div class="card">
+            <div class="card col-4">
                 <img class="card-img-top" src="pexels-eka-sutrisno-1863621.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h6 class="card-title">Sempervivum</h6>
